// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`amd-script Should load a single anonymous module 1`] = `

<div>
  ./simple.js
</div>

`;

exports[`amd-script Should support module dependencies 1`] = `

<div>
  ./dependencies-b.js
</div>
<div>
  ./dependencies-c.js
</div>
<div>
  ./dependencies-a.js
</div>

`;
